Increase coverage and fix sonar issue